<resources>
    <string name="app_name">Batter Life</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="border">Border</string>
    <string name="shape">Shape</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="color">Color</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="defaultColor">Default</string>
    <string name="battery_optimized">Optimized</string>
    <string name="unknown">Unknow</string>
    <string name="good">Good \n Health</string>
    <string name="over_heated">Over \n Heated</string>
    <string name="dead">Dead</string>
    <string name="over_voltage">Over \n Voltage</string>
    <string name="failed">Failed</string>
    <string name="cold">Cold</string>
    <string name="battery_type">Battery Type</string>
    <string name="power_source">Power Source</string>
    <string name="battery_temperature">Battery Temperature</string>
    <string name="battery_voltage">Battery Voltage</string>
    <string name="battery_scale">Battery Scale</string>
    <string name="version">Version</string>
    <string name="version_name">Version Name</string>
    <string name="api_level">API Level</string>
    <string name="build_id">Build Id</string>
    <string name="build_name">Build Name</string>
    <string name="fingerprint">Finger Print</string>

    <!-- Device Features -->
    <string name="wifi_direct">WiFi Direct</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_le">Bluetooth LE</string>
    <string name="gps">GPS</string>
    <string name="camera_flash">Camera Flash</string>
    <string name="camera_front">Camera Front</string>
    <string name="microphone">Microphone</string>
    <string name="nfc">NFC</string>
    <string name="usb_host">USB Host</string>
    <string name="usb_accessory">USB Accessory</string>
    <string name="multitouch">Multitouch</string>
    <string name="audio_low_latency">Audio low-latency</string>
    <string name="audio_output">Audio Output</string>
    <string name="professional_audio">Professional Audio</string>
    <string name="consumer_ir">Consumer IR</string>
    <string name="gamepad_support">Gamepad Support</string>
    <string name="hifi_sensor">HIFI Sensor</string>
    <string name="printing">printing</string>
    <string name="cdma">cdma</string>
    <string name="gsm">GSM</string>
    <string name="app_widgets">App Widgets</string>
    <string name="sip">SIP</string>
    <string name="sip_based_voip">SIP-based VOIP</string>
    <string name="available">Available</string>
    <string name="not_supported">Not Supported</string>
    <string name="please_provide_camera_perm">Please provide camera permission to view camera details. App-></string>
    <!-- Storage -->
    <string name="ram_usage">RAM Usage</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="external_storage">External Storage</string>
    <string name="used_memory">Used:</string>
    <string name="free">Free:</string>
    <string name="total">Total:</string>


    <string name="accessibility_permission">Accessibility permission</string>
    <string name="accessibility_permission_message">Please provide accessibility permission to automate the hibernation. \n\nOn the next screen find BatteryLife and turn on the accessibility setting.</string>

    <!-- OS version names -->
    <string name="honeycomb">Honeycomb</string>
    <string name="release_date">Release Date:\u0020</string>
    <string name="ics">Ice Cream Sandwich</string>
    <string name="jellybean">Jelly Bean</string>
    <string name="kitkat">Kitkat</string>
    <string name="lollipop">Lollipop</string>
    <string name="marshmallow">Marshmallow</string>
    <string name="nougat">Nougat</string>
    <string name="oreo">Oreo</string>
    <string name="unknown_version">Unknown version</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="used">Used</string>
    <string name="wifi">WiFi</string>
    <string name="hibernation_warning">-:Warning:- \n In Hibernation apps may not work properly, avoid hibernating any messaging apps.</string>
    <string name="hibernate">You can hibernate apps to save battery leeching.</string>
</resources>