<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_os_ver_ic"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"
                android:src="@drawable/ic_android"
                android:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/tv_version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textAllCaps="true"
                android:textSize="17sp"
                tools:ignore="MissingPrefix"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                tools:ignore="MissingPrefix"
                tools:targetApi="jelly_bean" />

        </LinearLayout>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <TableRow android:gravity="start">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxEms="5"
                        android:maxLines="4"
                        android:text="@string/version"
                        android:textSize="14sp"
                        tools:targetApi="jelly_bean" />

                    <TextView
                        android:id="@+id/tv_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxEms="4"
                        android:maxLines="4"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix"
                        tools:targetApi="jelly_bean" />

                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:gravity="start">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxEms="5"
                        android:maxLines="4"
                        android:text="@string/version_name"
                        android:textSize="14sp"
                        tools:targetApi="jelly_bean" />

                    <TextView
                        android:id="@+id/tv_sdk_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxEms="4"
                        android:maxLines="4"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix"
                        tools:targetApi="jelly_bean" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:gravity="start">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxEms="5"
                        android:maxLines="4"
                        android:text="@string/api_level"
                        android:textSize="14sp"
                        tools:targetApi="jelly_bean" />

                    <TextView
                        android:id="@+id/tv_api_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxEms="4"
                        android:maxLines="4"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix"
                        tools:targetApi="jelly_bean" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:gravity="start">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxEms="5"
                        android:maxLines="4"
                        android:text="@string/build_id"
                        android:textSize="14sp"
                        tools:targetApi="jelly_bean" />

                    <TextView
                        android:id="@+id/tv_build_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxEms="4"
                        android:maxLines="4"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix"
                        tools:targetApi="jelly_bean" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:gravity="start">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxEms="5"
                        android:maxLines="4"
                        android:text="@string/build_name"
                        android:textSize="14sp"
                        tools:targetApi="jelly_bean" />

                    <TextView
                        android:id="@+id/tv_build_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxEms="4"
                        android:maxLines="4"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix"
                        tools:targetApi="jelly_bean" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:gravity="start">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxEms="5"
                        android:maxLines="4"
                        android:text="@string/fingerprint"
                        android:textSize="14sp"
                        tools:targetApi="jelly_bean" />

                    <TextView
                        android:id="@+id/tv_fingerprint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxEms="4"
                        android:maxLines="6"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix"
                        tools:targetApi="jelly_bean" />
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
