<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <com.timqi.sectorprogressview.ColorfulRingProgressView
                        android:id="@+id/donut_ram_usage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/lato_regular"
                        app:bgColor="#e1e1e1"
                        app:fgColorEnd="#a9ff40"
                        app:fgColorStart="#34e162"
                        app:percent="59"
                        app:startAngle="0"
                        app:strokeWidth="12dp" />

                    <TextView
                        android:id="@+id/ram_percentage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textStyle="bold" />

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:paddingLeft="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_black"
                        android:text="@string/ram_usage"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_used_memory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/used_memory"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix"
                        tools:targetApi="jelly_bean" />

                    <TextView
                        android:id="@+id/tv_free_memory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/free"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix"
                        tools:targetApi="jelly_bean" />

                    <TextView
                        android:id="@+id/tv_total_memory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/total"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix"
                        tools:targetApi="jelly_bean" />
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <com.timqi.sectorprogressview.ColorfulRingProgressView
                        android:id="@+id/donut_internal_storage"
                        fontPath="fonts/Roboto-Medium.ttf"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        app:bgColor="#e1e1e1"
                        app:fgColorEnd="#ddeb37f4"
                        app:fgColorStart="#ae06b1"
                        app:percent="59"
                        app:startAngle="0"
                        app:strokeWidth="12dp"
                        tools:ignore="MissingPrefix" />

                    <TextView
                        android:id="@+id/internal_storage_perc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textStyle="bold" />

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingLeft="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_black"
                        android:text="@string/internal_storage"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp"
                        tools:targetApi="jelly_bean" />

                    <TextView
                        android:id="@+id/tv_used_intmemory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/used_memory"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix"
                        tools:targetApi="jelly_bean" />

                    <TextView
                        android:id="@+id/tv_free_intmemory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/free"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix"
                        tools:targetApi="jelly_bean" />

                    <TextView
                        android:id="@+id/tv_total_intmemory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/total"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix"
                        tools:targetApi="jelly_bean" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_ext_memory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:visibility="gone">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <com.timqi.sectorprogressview.ColorfulRingProgressView
                        android:id="@+id/donut_external_storage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:fontFamily="@font/lato_regular"
                        app:bgColor="#e1e1e1"
                        app:fgColorEnd="#3f38ff"
                        app:fgColorStart="#307cb3"
                        app:percent="59"
                        app:startAngle="0"
                        app:strokeWidth="12dp"
                        tools:ignore="MissingPrefix"
                        tools:targetApi="jelly_bean" />

                    <TextView
                        android:id="@+id/external_storage_perc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textStyle="bold" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:paddingLeft="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_black"
                        android:text="@string/external_storage"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp"
                        tools:targetApi="jelly_bean" />

                    <TextView
                        android:id="@+id/tv_used_extmemory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/used_memory"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix"
                        tools:targetApi="jelly_bean" />

                    <TextView
                        android:id="@+id/tv_free_extmemory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/free"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix"
                        tools:targetApi="jelly_bean" />

                    <TextView
                        android:id="@+id/tv_total_extmemory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/total"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix"
                        tools:targetApi="jelly_bean" />
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>